--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A game where you have to change the lightbulb.",
   "type": "module",
   "scripts": {
-    "build": "node ./build.js"
+    "build": "npm install && node ./build.js && npx love.js -c -m 100000000 -t \"Maintenance Man\" ./maintenance-man.love . && node ./complete.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/TheWildebeest/maintenance-man#readme",
   "dependencies": {
+    "love.js": "^11.4.1",
     "zip-lib": "^0.7.3"
   }
 }
